syntax = "proto3";

package envoy.extensions.bootstrap.reverse_connection_socket_interface.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.bootstrap.reverse_connection_socket_interface.v3";
option java_outer_classname = "UpstreamReverseConnectionSocketInterfaceProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/bootstrap/reverse_connection_socket_interface/v3;reverse_connection_socket_interfacev3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Bootstrap settings for Upstream Reverse Connection Socket Interface]
// [#extension: envoy.bootstrap.reverse_connection.upstream_reverse_connection_socket_interface]

// Configuration for the upstream reverse connection socket interface.
message UpstreamReverseConnectionSocketInterface {
  // Stat prefix to be used for upstream reverse connection socket interface stats.
  string stat_prefix = 1;
}
